--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <h1 style="text-align:center">胖胖大礼包</h1>
     <div class="wrapper" id="app">
         <div class="player">
             <div class="player__top">
